--- a/UnaTree1textured.html
+++ b/UnaTree1textured.html
@@ -19,10 +19,10 @@
 		<a-assets>
 			<a-asset-item id="UnaTree1-obj" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree1.obj"></a-asset-item>
 			<a-asset-item id="UnaTree1-mtl" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree1.mtl"></a-asset-item>
-			<a-asset-item id="UnaTree1Tex-dae" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree1Tex.dae"></a-asset-item>
+			<a-asset-item id="UnaTree1textured-dae" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree1textured.dae"></a-asset-item>
 		</a-assets>
 
-		<a-entity collada-model="#UnaTree1Tex-dae" position="0 0 0" rotation="0 0 0">A</a-entity>
+		<a-entity collada-model="#UnaTree1textured-dae" position="0 0 0" rotation="0 0 0">A</a-entity>
 		
 	</a-scene>
 
