--- a/UnaTree.html
+++ b/UnaTree.html
@@ -17,12 +17,12 @@
 	<a-scene altspace='fullspace: true'>
 
 		<a-assets>
-			<a-asset-item id="UnaTree1-obj" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree1.obj"></a-asset-item>
-			<a-asset-item id="UnaTree1-mtl" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree1.mtl"></a-asset-item>
-			<a-asset-item id="UnaTree1-dae" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree1.dae"></a-asset-item>
+			<a-asset-item id="UnaTree-obj" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree.obj"></a-asset-item>
+			<a-asset-item id="UnaTree-mtl" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree.mtl"></a-asset-item>
+			<a-asset-item id="UnaTree-dae" src="https://rawgit.com/Poemy/PoemySpace/master/UnaTree.dae"></a-asset-item>
 		</a-assets>
 
-		<a-entity obj-model="obj: #UnaTree1-obj; mtl: UnaTree1-mtl" position="0 0 0" rotation="0 0 0"></a-entity>
+		<a-entity collada-model="#UnaTree-dae" position="0 0 0" rotation="0 0 0">A</a-entity>
 
 	</a-scene>
 
